docs: fix horizontal scrollbar styles

--- a/docs/styles/globals.css
+++ b/docs/styles/globals.css
@@ -41,6 +41,7 @@ body {
 
 ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
